horizontal scrolling in mobile version fixed and website is completely responsive

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -154,7 +154,7 @@ body {
   display: inline-block;
   background: linear-gradient(90.87deg, #ffd8d8 0%, #ffdfbb 101.37%);
   border-radius: 50%;
-  padding: 0.5rem;
+  padding: 0.2rem;
 }
 .outer-box-small:hover {
   background: linear-gradient(90.87deg, #ff3c3c 0%, #ff8800 101.37%);
@@ -175,7 +175,7 @@ body {
 .inner-box-small {
   background-color: #0f0f27;
   border-radius: 50%;
-  padding: 2rem;
+  padding: 1rem;
 }
 .small-image {
   height: 50px;
@@ -210,7 +210,7 @@ body {
 }
 .absolute-text-design {
   position: absolute;
-  right: 15rem;
+  right: 25rem;
 }
 .arrow-inside {
   position: absolute;
@@ -218,7 +218,10 @@ body {
 }
 .select-choice-text {
   font-weight: bold;
-  font-size: 20px;
+  font-size: 15px;
+  position: absolute;
+  right: -3rem;
+  top: -3rem;
 }
 /* 
 Media Query For Responsive Design | min-width:700px will 
